# ci_cd_toolchains

./: .bazelrc  .gitignore  README.md  WORKSPACE
.github/workflows/: docker-image.yml
clang-format/: .clang-format  Dockerfile  README.md  clang-format.sh
example_code/: main.cpp
toolchains/cpp/: BUILD.bazel  cc_toolchain_config.bzl  register_toolchains.bzl  test..bzl.template
toolchains/external_dependencies/: dependencies.bzl
toolchains/format/: BUILD.bazel  bazel-buildifier.bzl
toolchains/gcc/: cc_toolchain_config.bzl  defs.bzl
toolchains/gcc/details/: sysroot_build_file_content.bzl  toolchain_build_file_template.bzl  toolchain_files_build_file_template.bzl
